# dineassign

./: CLAUDE.md  README.md  pyproject.toml
dineassign/: __init__.py  cli.py  models.py  normalize.py  optimizer.py  output.py  parser.py
